fix [landing-page.html]: Add basic HTML structure.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My TOP Journey</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Projects</h1>
-    <ul>
-        <li><a href="./projects/odin-recipes/odin-recipes.html">Odin Recipes</a></li>
-    </ul>
+    <details name="project">
+        <summary>Odin Recipes</summary>
+        <p>Ah, the first ones are always special. This was the first TOP project. It was the first time I was making something, although very, very basic as I see now but it was fun then.</p>
+        <a class="project-display" href="./projects/odin-recipes/odin-recipes.html">Have a look</a>
+    </details>
+    <details name="project">
+        <summary>The Landing Page</summary>
+        <p>Ah, the first ones are always special. This was the first TOP project. It was the first time I was making something, although very, very basic as I see now but it was fun then.</p>
+        <a class="project-display" href="./projects/the-landing-page/landing-page.html">Have a look</a>
+    </details>
 </body>
 </html>
