--- a/projects/the-landing-page/landing-page.html
+++ b/projects/the-landing-page/landing-page.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Convert your file - Convertify</title>
+    <title>Convert your files - Convertify</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <h3>convertify</h3>
-        </div>
+        <div class="logo">convertify</div>
         <nav>
-            <h4>tools</h4>
-            <h4>login</h4>
-            <h4>signup</h4>
+            <div><a href="#">tools</a></div>
+            <div>&#124</div>
+            <div><a href="#">login</a></div>
+            <div>&#124</div>
+            <div><a href="#">signup</a></div>
         </nav>
     </header>
+
     <main></main>
     <footer></footer>
 </body>
