feat [landing-page]: add hero-section and it's styling

--- a/projects/the-landing-page/landing-page.html
+++ b/projects/the-landing-page/landing-page.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convert your files - Convertify</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -18,7 +21,18 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <section class="hero-section">
+            <div class="hero-text">
+                <h2>convertify Your Files!</h2>
+                <p>There's a thousand of file types. But why worry about it when you got convertify!</p>
+                <p>You name it and we got you covered.</p>
+            </div>
+            <div class="hero-image">
+                <img src="./images/convertify4.png" alt="a vibrant image that shows the logo of convertify">
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
