feat [landding-page]: complete the landing page. Add the various sections to the html file and style it using css.

--- a/projects/the-landing-page/landing-page.html
+++ b/projects/the-landing-page/landing-page.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -24,15 +25,81 @@
     <main>
         <section class="hero-section">
             <div class="hero-text">
-                <h2>convertify Your Files!</h2>
-                <p>There's a thousand of file types. But why worry about it when you got convertify!</p>
-                <p>You name it and we got you covered.</p>
+                <h2>convertify your files!</h2>
+                <p>There's a thousand of file types. Worried about which one to choose?</p>
+                <p>Don't worry, we got you covered!</p>
             </div>
             <div class="hero-image">
                 <img src="./images/convertify4.png" alt="a vibrant image that shows the logo of convertify">
             </div>
         </section>
+
+        <section class="explore-section">
+            <div class="explore-tools">Explore tools.</div>
+
+            <div class="tools">
+                <div class="tool-info">
+                    <div class="tool-image">
+                        <a href="#"><img src="./images/tools/pdf-to-image.svg" alt=""></a>
+                    </div>
+                    <div class="tool-text">
+                        <a href="#">Convert PDF to Image</a>
+                    </div>
+                </div>
+                <div class="tool-info">
+                    <div class="tool-image">
+                        <a href="#"><img src="./images/tools/image-to-pdf.svg" alt=""></a>
+                    </div>
+                    <div class="tool-text">
+                        <a href="#">Convert Image to PDF</a>
+                    </div>
+                </div>
+                <div class="tool-info">
+                    <div class="tool-image">
+                        <a href="#"><img src="./images/tools/wordToPdf.svg" alt=""></a>
+                    </div>
+                    <div class="tool-text">
+                        <a href="#">Convert DOCX to PDF</a>
+                    </div>
+                </div>
+                <div class="tool-info">
+                    <div class="tool-image">
+                        <a href="#"><img src="./images/tools/merge-pdf.svg" alt=""></a>
+                    </div>
+                    <div class="tool-text">
+                        <a href="#">Merge PDF(s)</a>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section class="review-section">
+            <div class="customer-review">
+                My experience with convertify has been amazing. The speed is amazing and it's really easy to use. For me this is a 5 star product.
+            </div>
+            <div class="star-rating">
+                <span class="fa fa-star checked fa-2x"></span>
+                <span class="fa fa-star checked fa-2x"></span>
+                <span class="fa fa-star checked fa-2x"></span>
+                <span class="fa fa-star checked fa-2x"></span>
+                <span class="fa fa-star checked fa-2x"></span>
+            </div>
+            <div class="customer-name">
+                <p>&#8209; Medha Loona</p>
+            </div>
+        </section>
+        <section class="call-to-action">
+            <div>
+                <p class="cta-heading">
+                    Call to action! It's time!
+                </p>
+                <p>
+                    Sign up for our product by clicking that button right over there.
+                </p>
+            </div>
+            <button class="cta-button">Sign up</button>
+        </section>
     </main>
-    <footer></footer>
+    <footer>Copyright &#169 mahaaaraja 2024</footer>
 </body>
 </html>
