fix [landing-page]: minor fixes and enhancements

--- a/projects/the-landing-page/landing-page.html
+++ b/projects/the-landing-page/landing-page.html
@@ -85,7 +85,7 @@
                 <span class="fa fa-star checked fa-2x"></span>
             </div>
             <div class="customer-name">
-                <p>&#8209; Medha Loona</p>
+                <p>&#8209; Peter Griffin</p>
             </div>
         </section>
         <section class="call-to-action">
