fix [odin-recipes]: fix minor issues left out in the landing page

--- a/projects/odin-recipes/odin-recipes.html
+++ b/projects/odin-recipes/odin-recipes.html
@@ -68,5 +68,7 @@
                 </div>
             </details>
         </section>
+
+        <footer>Copyright &#169 mahaaaraja 2024</footer>
 </body>
 </html>
