fix [odin-recipes]: add styling and make corrections to the various recipes

--- a/projects/odin-recipes/recipes/aloo-paratha.html
+++ b/projects/odin-recipes/recipes/aloo-paratha.html
@@ -3,52 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aloo Parantha Recipe</title>
+    <title>Aloo Paratha Recipe</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Aloo Paratha</h1>
-    <br>
-    <img src="../assets/images/aloo-paratha.jpg" height="300px" width=auto alt="aloo paratha image">
-    <br>
-    <h3>Description</h3>
-    <p>This is a traditional Indian bread filled with a well seasoned boiled potato studding that is very popular for every age group.</p>
-    <p>Aloo paratha is easy to make, takes minimal ingridients and tastes amazing. It's a heavenly dish to serve on a rainy day. It's an easy recipe and a definite group pleaser. Garnish each paratha with a thin slice of butter and serve with plain yogurt.</p>
-    
-    <h3>Ingridients</h3>
-    <em>Serves: 3</em>
-    <ul>
+    <header>
+        <div class="website-name">
+            Odin Recipes.
+        </div>
+        <div class="logo">
+            <img src="../assets/images/odin.svg" alt="logo of the oding project">
+        </div>
+    </header>
+    <main>
+        <section class="recipe-banner">
+            <div class="recipe-content">
+                <div class="recipe-name">Aloo Paratha</div>
+                <div class="recipe-intro">
+                    This is a traditional Indian bread filled with a well seasoned boiled potato studding that is very popular for every age group. It's a heavenly dish to serve on a rainy day. It's an easy recipe and a definite group pleaser. Garnish each paratha with a thin slice of butter and serve with plain yogurt.
+                </div>
+            </div>
+            <div class="recipe-image">
+                <img src="../assets/images/aloo-paratha.jpg" alt="aloo paratha image">
+            </div>
+        </section>
 
-        <li>3 medium potatoes, peeled and cubed</li>
-        <li>4 teaspoons vegetable oil, divided, or as needed</li>
-        <li>¼ teaspoon cumin seeds</li>
-        <li>2 green chile peppers, minced</li>
-        <li>6 fresh curry leaves</li>
-        <li>½ teaspoon minced fresh ginger</li>
-        <li>1 pinch ground turmeric, or to taste</li>
-        <li>salt to taste</li>
-        <li>5 cups whole wheat flour, divided(for dough)</li>
-        <li>1 ¼ cups water(for dough)</li>
+        <section class="recipe">
+            <div class="ingridients">
+                <div class="heading">Ingridients</div>
+                <em>Serves: 3</em>
+                <ul>
 
-    </ul>
+                    <li>3 medium potatoes, peeled and cubed</li>
+                    <li>4 teaspoons vegetable oil, divided, or as needed</li>
+                    <li>¼ teaspoon cumin seeds</li>
+                    <li>2 green chile peppers, minced</li>
+                    <li>6 fresh curry leaves</li>
+                    <li>½ teaspoon minced fresh ginger</li>
+                    <li>1 pinch ground turmeric, or to taste</li>
+                    <li>salt to taste</li>
+                    <li>5 cups whole wheat flour, divided(for dough)</li>
+                    <li>1 ¼ cups water(for dough)</li>
 
-    <h3>Steps</h3>
+                </ul>
+            </div>
+            <div class="steps">
+                <div class="heading">Steps</div>
+                <ol>
+                    <li>Place a steamer insert into a saucepan and fill with water to just below the bottom of the steamer. Bring water to a boil. Add potatoes, cover, and steam until tender, 10 to 15 minutes. Remove from the heat.</li>
 
-    <ol>
+                    <li>Heat 1 1/2 teaspoons vegetable oil in a medium skillet over medium heat. Add cumin seeds and cook until light brown, 2 to 3 minutes. Add chile peppers, curry leaves, and ginger; cook and stir for about 1 minute. Add potatoes, turmeric, and salt; cook and stir carefully for about 5 minutes.</li>
 
-        <li>Place a steamer insert into a saucepan and fill with water to just below the bottom of the steamer. Bring water to a boil. Add potatoes, cover, and steam until tender, 10 to 15 minutes. Remove from the heat.</li>
+                    <li>Transfer potatoes to a bowl and allow to cool, about 15 minutes.</li>
 
-        <li>Heat 1 1/2 teaspoons vegetable oil in a medium skillet over medium heat. Add cumin seeds and cook until light brown, 2 to 3 minutes. Add chile peppers, curry leaves, and ginger; cook and stir for about 1 minute. Add potatoes, turmeric, and salt; cook and stir carefully for about 5 minutes.</li>
+                    <li>Place 1/2 cup flour into a shallow bowl. Combine the remaining flour and 1 1/2 teaspoons oil in a large mixing bowl; salt to taste. Mix with your hands while gradually adding water. Knead dough until a smooth ball forms. Divide into 6 evenly round balls.</li>
 
-        <li>Transfer potatoes to a bowl and allow to cool, about 15 minutes.</li>
+                    <li>Roll each dough ball into a thick, circular shape. Form the cooled potato mixture into 6 round balls and place a potato ball on top of each dough circle. Fold all the dough sides over the potato filling to cover. Flatten each stuffed dough slightly while dipping both sides into the bowl of flour.</li>
 
-        <li>Place 1/2 cup flour into a shallow bowl. Combine the remaining flour and 1 1/2 teaspoons oil in a large mixing bowl; salt to taste. Mix with your hands while gradually adding water. Knead dough until a smooth ball forms. Divide into 6 evenly round balls.</li>
+                    <li>Roll each dough to a thin, circular shape and set a few inches apart on parchment paper.</li>
 
-        <li>Roll each dough ball into a thick, circular shape. Form the cooled potato mixture into 6 round balls and place a potato ball on top of each dough circle. Fold all the dough sides over the potato filling to cover. Flatten each stuffed dough slightly while dipping both sides into the bowl of flour.</li>
+                    <li>Set a large skillet over medium heat and lightly spread with remaining oil. Place a stuffed paratha on the hot skillet and cook for 2 to 3 minutes. Flip over and cook the other side for 2 to 3 minutes. Remove to a serving plate and continue this same process for all the parathas. Serve hot.</li>
 
-        <li>Roll each dough to a thin, circular shape and set a few inches apart on parchment paper.</li>
+                </ol>
+            </div>
+        </section>
+        
 
-        <li>Set a large skillet over medium heat and lightly spread with remaining oil. Place a stuffed paratha on the hot skillet and cook for 2 to 3 minutes. Flip over and cook the other side for 2 to 3 minutes. Remove to a serving plate and continue this same process for all the parathas. Serve hot.</li>
+    </main>
 
-    </ol>
+    <footer>Copyright &#169 mahaaaraja 2024</footer>
 </body>
 </html>
