--- a/projects/odin-recipes/recipes/burger.html
+++ b/projects/odin-recipes/recipes/burger.html
@@ -3,65 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vegetarian High Protein Burger Recipe</title>
+    <title>Aloo Paratha Recipe</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Vegetarian High Protein Burger Recipe</h1>
-    <br>
-    <img src="../assets/images/burger.jpg" height="400px" width=auto alt="vegetarian burger image">
-    <br>
-    <h3>Description</h3>
-    <p>All healthy things taste bad!</p>
-    <p>
-    If this is what you think, then this recipe will change your perception of healthy food forever. A healthy and fulfilling vegetarian meal that will soothe you taste buds. So get ready to enjoy eating healthy. It is very easy and quick to make and also takes minimal ingridients.
-    </p>
-    
-    <h3>Ingridients</h3>
-    <em>Serves: 3</em>
-    <ul>
+    <header>
+        <div class="website-name">
+            Odin Recipes.
+        </div>
+        <div class="logo">
+            <img src="../assets/images/odin.svg" alt="logo of the oding project">
+        </div>
+    </header>
+    <main>
+        <section class="recipe-banner">
+            <div class="recipe-content">
+                <div class="recipe-name">Vegetarian High Protein Burger</div>
+                <div class="recipe-intro">
+                    Who said healthy food is tasteless?<br>
+                    Introducing a vegetarian meal that will soothe your taste buds while also not destroying your health at the same time. So get ready to enjoy eating healthy. It is very easy and quick to make and also takes minimal ingridients.
+                </div>
+            </div>
+            <div class="recipe-image">
+                <img src="../assets/images/burger.jpg" alt="image of a burger">
+            </div>
+        </section>
 
-        <li>2 medium sized potatoes</li>
-        <li>Soyabean Granules, 100g</li>
-        <li>Cottage Cheese(Paneer), 100g</li>
-        <li>2 green chile peppers, minced</li>
-        <li>½ teaspoon minced fresh ginger</li>
-        <li>1 pinch ground turmeric, or to taste</li>
-        <li>salt to taste</li>
-        <li>2 medium sized onions</li>
-        <li>2 medium sized tomatoes</li>
-        <li>1 cucumber</li>
-        <li>1 cup cabbage</li>
-        <li>½ cup sliced carrot</li>
-        <li>1 thinly sliced capsicum</li>
-        <li>Cheese Slice</li>
-        <li>Burger Buns</li>
-        <li>2 tbsp oil</li>
-        <li>3-4 cloves of garlic, minced</li>
-        <li>Hung curd, 100g</li>
-        <li>2 tbsp Italian Seasoning</li>
-        <li>Ketchup</li>
-        <li>Mustard</li>
+        <section class="recipe">
+            <div class="ingridients">
+                <div class="heading">Ingridients</div>
+                <em>Serves: 3</em>
+                <ul>
 
-    </ul>
+                    <li>2 medium sized potatoes</li>
+                    <li>Soyabean Granules, 100g</li>
+                    <li>Cottage Cheese(Paneer), 100g</li>
+                    <li>2 green chile peppers, minced</li>
+                    <li>½ teaspoon minced fresh ginger</li>
+                    <li>1 pinch ground turmeric, or to taste</li>
+                    <li>salt to taste</li>
+                    <li>2 medium sized onions</li>
+                    <li>2 medium sized tomatoes</li>
+                    <li>1 cucumber</li>
+                    <li>1 cup cabbage</li>
+                    <li>½ cup sliced carrot</li>
+                    <li>1 thinly sliced capsicum</li>
+                    <li>Cheese Slice</li>
+                    <li>Burger Buns</li>
+                    <li>2 tbsp oil</li>
+                    <li>3-4 cloves of garlic, minced</li>
+                    <li>Hung curd, 100g</li>
+                    <li>2 tbsp Italian Seasoning</li>
+                    <li>Ketchup</li>
+                    <li>Mustard</li>
 
-    <h3>Steps</h3>
+                </ul>
+            </div>
+            <div class="steps">
+                <div class="heading">Steps</div>
+                <ol>
+                    <li>Boil the potatoes and the soyabean granules.</li>
 
-    <ol>
+                    <li>Now grid the soyabean granules. Mash the potatoes and mix it with soyabean granules and grated paneer.</li>
 
-        <li>Boil the potatoes and the soyabean granules.</li>
+                    <li>Now take a sauce pan, add a little oil and once the oil is hot, add garlic and ginger. After a minute, add you soyabean, potato and paneer mixture and mix it. Now add some salt. Now add some turmeric and other spices you like and add some green chillies. Now take this off the heat and let it cool.</li>
 
-        <li>Now grid the soyabean granules. Mash the potatoes and mix it with soyabean granules and grated paneer.</li>
+                    <li>Take a bowl and in it add shredded cabbage, carrots, capsicum and onions(little bit). Now in this, add your hung curd and mix it.</li>
 
-        <li>Now take a sauce pan, add a little oil and once the oil is hot, add garlic and ginger. After a minute, add you soyabean, potato and paneer mixture and mix it. Now add some salt. Now add some turmeric and other spices you like and add some green chillies. Now take this off the heat and let it cool.</li>
+                    <li>Once your curd mixture is ready and the soyabean mixture has cooled, take the soyabean mixture and give it the shape of a patty.</li>
 
-        <li>Take a bowl and in it add shredded cabbage, carrots, capsicum and onions(little bit). Now in this, add your hung curd and mix it.</li>
+                    <li>Now we are all done, it's time to assemble the burger. Take the buns, add a little bit of mustard. Then add your cabbage mixture and your patty. Top it with onions, tomatoes, cucumber and cheese. Now apply some ketchup on the other bun and heat it(in an oven or in a pan with some oil).</li>
 
-        <li>Once your curd mixture is ready and the soyabean mixture has cooled, take the soyabean mixture and give it the shape of a patty.</li>
+                    <li>Your high protein vegetarian burgers are ready. Enjoy them before they cool down!</li>
 
-        <li>Now we are all done, it's time to assemble the burger. Take the buns, add a little bit of mustard. Then add your cabbage mixture and your patty. Top it with onions, tomatoes, cucumber and cheese. Now apply some ketchup on the other bun and heat it(in an oven or in a pan with some oil).</li>
+                </ol>
+            </div>
+        </section>
+        
 
-        <li>Your high protein vegetarian burgers are ready. Enjoy them before they cool down!</li>
+    </main>
 
-    </ol>
+    <footer>Copyright &#169 mahaaaraja 2024</footer>
 </body>
 </html>
