--- a/projects/odin-recipes/recipes/pasta.html
+++ b/projects/odin-recipes/recipes/pasta.html
@@ -3,58 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bechamel Sauce Pasta</title>
+    <title>Aloo Paratha Recipe</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Bechamel Sauce Pasta</h1>
-    <br>
-    <img src="../assets/images/pasta.jpg" height="400px" width=auto alt="bechamel sauce pasta with veggies imagee">
-    <br>
-    <h3>Description</h3>
-    <p>Who doesn't like pasta?<br> Who doesn't like cheese?<br>
-    Everyone likes these two right, but what if they are combined?
-    Magic happens and a dish is born that just causes a symphony of flavours in your mouth.
-    Minimal ingridients, easy to make, takes less time, the added veggies make it nutritious, creamy, now what else do you need?
-    </p>
-    
-    <h3>Ingridients</h3>
-    <em>Serves: 2</em>
-    <ul>
+    <header>
+        <div class="website-name">
+            Odin Recipes.
+        </div>
+        <div class="logo">
+            <img src="../assets/images/odin.svg" alt="logo of the oding project">
+        </div>
+    </header>
+    <main>
+        <section class="recipe-banner">
+            <div class="recipe-content">
+                <div class="recipe-name">Bechamel Sauce Pasta</div>
+                <div class="recipe-intro">
+                    Cheese and Pasta!
+                    <br>
+                    Sounds fun, innit? Minimal ingridients, easy to make, takes less time, the added veggies make it nutritious, creamy, now what else do you need? This dish should be the one to pull you out of depression.
+                </div>
+            </div>
+            <div class="recipe-image">
+                <img src="../assets/images/pasta.jpg" alt="image of a serving of bechamel sauce pasta in a plate">
+            </div>
+        </section>
 
-        <li>150 grams Dried Pasta, Macaroni /Penne /Fusilli / Orecchiette / Rigatoni</li>
-        <li>2 tablespoon Salt</li>
-        <li>5 cups Water</li>
-        <li>2 tablespoon Butter</li>
-        <li>1 tablespoon Olive Oil</li>
-        <li>4-5 cloves Garlic, minced</li>
-        <li>1 cup Onion, diced</li>
-        <li>1/2 cup Broccoli florets</li>
-        <li>6-7 Mushrooms, halved</li>
-        <li>1/2 cup Corn Kernels</li>
-        <li>1 cup Bell Peppers, cubed (colored)</li>
-        <li>1 teaspoon Pepper powder</li>
-        <li>1 teaspoon Italian seasoning</li>
-        <li>2 tablespoons All Purpose Flour(or any other flour)</li>
-        <li>2 cups Milk</li>
-        <li>1 cup Mozzarella, grated</li>
-        <li>1 teaspoon Dijon Mustard, optional</li>
-        <li>2 tablespoon Basil, shredded</li>
-        <li>1/2 cup Cream, optional</li>
+        <section class="recipe">
+            <div class="ingridients">
+                <div class="heading">Ingridients</div>
+                <em>Serves: 2</em>
+                <ul>
 
-    </ul>
+                    <li>150 grams Dried Pasta, Macaroni /Penne /Fusilli / Orecchiette / Rigatoni</li>
+                    <li>2 tablespoon Salt</li>
+                    <li>5 cups Water</li>
+                    <li>2 tablespoon Butter</li>
+                    <li>1 tablespoon Olive Oil</li>
+                    <li>4-5 cloves Garlic, minced</li>
+                    <li>1 cup Onion, diced</li>
+                    <li>1/2 cup Broccoli florets</li>
+                    <li>6-7 Mushrooms, halved</li>
+                    <li>1/2 cup Corn Kernels</li>
+                    <li>1 cup Bell Peppers, cubed (colored)</li>
+                    <li>1 teaspoon Pepper powder</li>
+                    <li>1 teaspoon Italian seasoning</li>
+                    <li>2 tablespoons All Purpose Flour(or any other flour)</li>
+                    <li>2 cups Milk</li>
+                    <li>1 cup Mozzarella, grated</li>
+                    <li>1 teaspoon Dijon Mustard, optional</li>
+                    <li>2 tablespoon Basil, shredded</li>
+                    <li>1/2 cup Cream, optional</li>
 
-    <h3>Steps</h3>
+                </ul>
+            </div>
+            <div class="steps">
+                <div class="heading">Steps</div>
+                <ol>
+                    <li>In a large pot bring 5 cups water to a rolling boil, add 2 tablespoons of salt to this along with uncooked pasta. Cook according to package instructions till al dente. Drain, wash with cold water and set aside.</li>
 
-    <ol>
+                    <li>In a large pot bring 5 cups water to a rolling boil, add 2 tablespoons of salt to this along with uncooked pasta. Cook according to package instructions till al dente. Drain, wash with cold water and set aside.</li>
 
-        <li>In a large pot bring 5 cups water to a rolling boil, add 2 tablespoons of salt to this along with uncooked pasta. Cook according to package instructions till al dente. Drain, wash with cold water and set aside.</li>
+                    <li>Add flour and cook stirring for a minute or two. Slowly start adding milk while stirring continuously till the sauce starts to thicken. Simmer for two minutes and add cream. Mix the cream and add the drained cooked pasta and cheese.</li>
 
-        <li>In a large pot bring 5 cups water to a rolling boil, add 2 tablespoons of salt to this along with uncooked pasta. Cook according to package instructions till al dente. Drain, wash with cold water and set aside.</li>
+                    <li>Add dijon mustard and fresh basil (if using) and stir to mix everything together. Serve immediately.</li>
 
-        <li>Add flour and cook stirring for a minute or two. Slowly start adding milk while stirring continuously till the sauce starts to thicken. Simmer for two minutes and add cream. Mix the cream and add the drained cooked pasta and cheese.</li>
+                </ol>
+            </div>
+        </section>
+        
 
-        <li>Add dijon mustard and fresh basil (if using) and stir to mix everything together. Serve immediately.</li>
+    </main>
 
-    </ol>
+    <footer>Copyright &#169 mahaaaraja 2024</footer>
 </body>
 </html>
