--- a/projects/odin-recipes/recipes/pasta.html
+++ b/projects/odin-recipes/recipes/pasta.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="website-name">
-            Odin Recipes.
+            <a href="../odin-recipes.html">Odin Recipes.</a>
         </div>
         <div class="logo">
             <img src="../assets/images/odin.svg" alt="logo of the oding project">
