fix [index.html]: bug fixes and accessibility improvement for website

--- a/projects/odin-recipes/odin-recipes.html
+++ b/projects/odin-recipes/odin-recipes.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./assets/images/odin.svg" alt="logo of the oding project">
+            <img src="./assets/images/odin.svg" alt="logo of the odin project">
         </div>
         <div class="input"><input type="text" placeholder="Search Recipe"></div>
     </header>
@@ -59,7 +59,7 @@
                 <summary>Bechamel Sauce Pasta</summary>
                 <div class="food-recipe-odd">
                     <div class="food-image">
-                        <img src="./assets/images/pasta.jpg" alt="an image of aloo parathas">
+                        <img src="./assets/images/pasta.jpg" alt="an image of a serving of bechamel sauce pasta">
                     </div>
                     <div class="recipe-intro">
                         Cheese and Pasta!
