--- a/projects/odin-recipes/recipes/burger.html
+++ b/projects/odin-recipes/recipes/burger.html
@@ -16,7 +16,7 @@
             <a href="../odin-recipes.html">Odin Recipes.</a>
         </div>
         <div class="logo">
-            <img src="../assets/images/odin.svg" alt="logo of the oding project">
+            <img src="../assets/images/odin.svg" alt="logo of the odin project">
         </div>
     </header>
     <main>
