--- a/projects/the-landing-page/landing-page.html
+++ b/projects/the-landing-page/landing-page.html
@@ -40,7 +40,7 @@
             <div class="tools">
                 <div class="tool-info">
                     <div class="tool-image">
-                        <a href="#"><img src="./images/tools/pdf-to-image.svg" alt=""></a>
+                        <a href="#"><img src="./images/tools/pdf-to-image.svg" alt="image of pdf to image converter tool"></a>
                     </div>
                     <div class="tool-text">
                         <a href="#">Convert PDF to Image</a>
@@ -48,7 +48,7 @@
                 </div>
                 <div class="tool-info">
                     <div class="tool-image">
-                        <a href="#"><img src="./images/tools/image-to-pdf.svg" alt=""></a>
+                        <a href="#"><img src="./images/tools/image-to-pdf.svg" alt="image of image to pdf converter tool"></a>
                     </div>
                     <div class="tool-text">
                         <a href="#">Convert Image to PDF</a>
@@ -56,7 +56,7 @@
                 </div>
                 <div class="tool-info">
                     <div class="tool-image">
-                        <a href="#"><img src="./images/tools/wordToPdf.svg" alt=""></a>
+                        <a href="#"><img src="./images/tools/wordToPdf.svg" alt="image of word to pdf converter tool"></a>
                     </div>
                     <div class="tool-text">
                         <a href="#">Convert DOCX to PDF</a>
@@ -64,7 +64,7 @@
                 </div>
                 <div class="tool-info">
                     <div class="tool-image">
-                        <a href="#"><img src="./images/tools/merge-pdf.svg" alt=""></a>
+                        <a href="#"><img src="./images/tools/merge-pdf.svg" alt="image of tool used to merge two or more pdf's"></a>
                     </div>
                     <div class="tool-text">
                         <a href="#">Merge PDF(s)</a>
@@ -85,7 +85,7 @@
                 <span class="fa fa-star checked fa-2x"></span>
             </div>
             <div class="customer-name">
-                <p>&#8209; Medha Loona</p>
+                <p>&#8209; Peter Griffin</p>
             </div>
         </section>
         <section class="call-to-action">
