added search icon and clear icon buttons to the search bar

--- a/projects/odin-recipes/odin-recipes.html
+++ b/projects/odin-recipes/odin-recipes.html
@@ -15,7 +15,12 @@
         <div class="logo">
             <img src="./assets/images/odin.svg" alt="logo of the odin project">
         </div>
-        <div class="input"><input type="text" placeholder="Search Recipe"></div>
+
+        <div class="input">
+            <input type="text" placeholder="Search Recipe">
+            <button class="cancel-search"><img src="./assets/images/clear.svg" alt="cross image"></button>
+            <button class="search-icon"><img src="./assets/images/search-icon.svg" alt="search icon image as a button"></button>
+        </div>
     </header>
 
     <main>
